--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,13 +3,13 @@
 name="Web"
 platform="Web"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Downloads/export/index.html"
+export_path="../../exports/index.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -27,7 +27,7 @@ variant/thread_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/export_icon=true
-html/custom_html_shell=""
+html/custom_html_shell="res://web_export_shell/index.html"
 html/head_include=""
 html/canvas_resize_policy=2
 html/focus_canvas_on_start=true
